# crc

./: CMakeLists.txt  Doxyfile
include/xitren/: crc16.hpp  crc8.hpp  crc_concept.hpp  crc_xor.hpp
tests/: CMakeLists.txt  crc8_test.cpp  crc_crc16_base_test.cpp  crc_crc8_base_test.cpp
